add services list

--- a/etc/all.ini
+++ b/etc/all.ini
@@ -3,129 +3,134 @@
 [smtp]
 name="smtps"
 trigger="smtps"
-port=x
+port=9002
 smtps=True
 
 [http]
 name="http"
 trigger="http"
-port=x
+port=9002
 
 [tls]
 name="tls"
 trigger="tls"
-port=x
+port=9002
 max-version=0
 
 [pop3]
 name="pop3s"
 trigger="pop3s"
 pop3s=True
-port=x
+port=9002
 
 [pop3]
 name="pop3"
 trigger="pop3"
-port=x
+port=9002
 
 [imap]
 name="imaps"
 trigger="imaps"
 imaps=True
-port=x
+port=9002
 
 [imap]
 name="imap"
 trigger="imap"
-port=x
+port=9002
 
 [dnp3]
 name="dnp3"
 trigger="dnp3"
-port=x
+port=9002
 
 [fox]
 name="fox"
 trigger="fox"
-port=x
+port=9002
 
 [siemens]
 name="siemens"
 trigger="siemens"
-port=x
+port=9002
 
 [telnet]
 name="telnet"
 trigger="telnet"
-port=x
+port=9002
 
 [bacnet]
 name="bacnet"
 trigger="bacnet"
-port=x
+port=9002
 
 [smb]
 name="smb"
 trigger="smb"
-port=x
+port=9002
 
 [ftp]
 name="ftp"
 trigger="ftp"
-port=x
+port=9002
 
 [modbus]
 name="modbus"
 trigger="modbus"
-port=x
+port=9002
 
 [mysql]
 name="mysql"
 trigger="mysql"
-port=x
+port=9002
 
 [oracle]
 name="oracle"
 trigger="oracle"
-port=x
+port=9002
 
 [postgres]
 name="postgres"
 trigger="postgres"
-port=x
+port=9002
 
 [redis]
 name="redis"
 trigger="redis"
-port=x
+port=9002
 
 [ipp]
 name="ipp"
 trigger="ipp"
-port=x
+port=9002
 
 [ntp]
 name="ntp"
 trigger="ntp"
-port=x
+port=9002
 
 [ssh]
 name="ssh"
 trigger="ssh"
-port=x
+port=9002
 userauth=True
 
 [mssql]
 name="mssql"
 trigger="mssql"
-port=x
+port=9002
 
 [mongodb]
 name="mongodb"
 trigger="mongodb"
-port=x
+port=9002
 
 [smtp]
 name="smtp"
 trigger="smtp"
-port=x
+port=9002
+
+[bandwidthtest]
+name="bandwidthtest"
+trigger="bandwidthtest"
+port=9002
